# magnum-tips

./: GridRenderer.cpp  GridRenderer.h  LineRenderer.cpp  LineRenderer.h  MathUtils.cpp  MathUtils.h  README.md  ScaleController.cpp  ScaleController.h  ThirdPersonCameraController.cpp  ThirdPersonCameraController.h  TranslateController.cpp  TranslateController.h  Types.h
demo/: README.md
demo/src/: CMakeLists.txt  CubeDrawable.h  MyApplication.cpp
